Cleanup code via IntelliJ's code inspection.
Replace String.equals() with String.isEmpty().
Replace String concatenations with chained StringBuilder appends.
Use List.of() instead of Arrays.asList().
Make inner classes static.
Remove redundant final in final class.
Remove protected members in final classes.
Remove unused imports.